# rust-cms

./: .env.sample  Cargo.toml  README.md
docs/: index.md
migrations/2020-05-27-104645_create_posts_authors/: down.sql  up.sql
migrations/2020-05-28-171854_create_session/: up.sql
migrations/2020-05-29-055855_create_tags/: down.sql  up.sql
src/: main.rs
src/database/: authentication.rs  config.rs  connection.rs  error.rs  mod.rs  models.rs  posts.rs  schema.rs  sessions.rs  tags.rs
src/database/authentication/: hash.rs
src/server/: error.rs  mod.rs  server.rs  session.rs  state.rs  templates.rs
src/server/pages/: authentication.rs  index.rs  mod.rs
src/server/routes/: authentication.rs  index.rs  mod.rs  not_found.rs  posts.rs  tags.rs
src/server/routes/admin/: config.rs  index.rs  mod.rs  posts.rs
src/server/session/: jwt.rs
templates/: 404.liquid  error.liquid  index.liquid  login.liquid  message.liquid  post.liquid  posts.liquid  register.liquid  tag.liquid  tags.liquid
templates/admin/: config.liquid  index.liquid  post.liquid  posts.liquid
templates/partials/: adminnav.liquid  header.liquid  sitenav.liquid
