[package]
name = "rust-cms"
version = "0.1.0"
authors = ["Jamie Choi <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
tide = "0.9.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.11", features = ["serde"] }
liquid = "0.20.0"
ring = "0.16.13"
data-encoding = "2.2.1"
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "7.1.0"
pulldown-cmark = { version = "0.7", default-features = false }
mime = "0.3.16"
uuid = { version = "0.8.1", features = ["v4"] }